GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Dropped features

  Bootstrapping with Makefile.boot has been broken since grep 2.6,
  and was removed.

* Noteworthy changes in release 2.12 (2012-04-23) [stable]

** Bug fixes

  "echo P|grep --devices=skip P" once again prints P, as it did in 2.10
  [bug introduced in grep-2.11]

  grep no longer segfaults with -r --exclude-dir and no file operand.
  I.e., ":|grep -r --exclude-dir=D PAT" would segfault.
  [bug introduced in grep-2.11]

  Recursive grep now uses fts for directory traversal, so it can
  handle much-larger directories without reporting things like "File
  name too long", and it can run much faster when dealing with large
  directory hierarchies. [bug present since the beginning]

  grep -E 'a{1000000000}' now reports an overflow error rather than
  silently acting like grep -E 'a\{1000000000}'.

** New features

  The -R option now has a long-option alias --dereference-recursive.

** Changes in behavior

  The -r (--recursive) option now follows only command-line symlinks.
  Also, by default -r now reads a device only if it is named on the command
  line; this can be overridden with --devices.  -R acts as before, so
  use -R if you prefer the old behavior of following all symlinks and
  defaulting to reading all devices.


* Noteworthy changes in release 2.11 (2012-03-02) [stable]

** Bug fixes

  grep no longer dumps core on lines whose lengths do not fit in 'int'.
  (e.g., lines longer than 2 GiB on a typical 64-bit host).
  Instead, grep either works as expected, or reports an error.
  An error can occur if not enough main memory is available, or if the
  GNU C library's regular expression functions cannot handle such long lines.
  [bug present since "the beginning"]

  The -m, -A, -B, and -C options no longer mishandle context line
  counts that do not fit in 'int'.  Also, grep -c's counts are now